--- a/vxLib/vxLib.vcxproj.filters
+++ b/vxLib/vxLib.vcxproj.filters
@@ -63,9 +63,6 @@
     <ClCompile Include="..\source\stb_image_write.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\source\TextPreprocessor.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\source\Window.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -78,17 +75,8 @@
     <ClCompile Include="..\source\Graphics\Mesh.cpp">
       <Filter>Source Files\Graphics</Filter>
     </ClCompile>
-    <ClCompile Include="..\source\PoolAllocator.cpp">
-      <Filter>Source Files\Allocator</Filter>
-    </ClCompile>
-    <ClCompile Include="..\source\StackAllocator.cpp">
-      <Filter>Source Files\Allocator</Filter>
-    </ClCompile>
-    <ClCompile Include="..\source\Allocator.cpp">
-      <Filter>Source Files\Allocator</Filter>
-    </ClCompile>
-    <ClCompile Include="..\source\AllocationProfiler.cpp">
-      <Filter>Source Files\Allocator</Filter>
+    <ClCompile Include="..\source\CpuTimer.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -111,13 +99,7 @@
     <ClInclude Include="..\include\vxLib\algorithm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\vxLib\AlignedStorage.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\include\vxLib\Keyboard.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\vxLib\memory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\include\vxLib\RawInput.h">
@@ -138,9 +120,6 @@
     <ClInclude Include="..\include\vxLib\StringID.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\vxLib\TextPreprocessor.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\include\vxLib\type_traits.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -153,28 +132,7 @@
     <ClInclude Include="..\include\vxLib\Window.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\vxLib\Allocator\AllocationProfiler.h">
-      <Filter>Header Files\Allocator</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\vxLib\Allocator\Allocator.h">
-      <Filter>Header Files\Allocator</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\vxLib\Allocator\PoolAllocator.h">
-      <Filter>Header Files\Allocator</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\vxLib\Allocator\StackAllocator.h">
-      <Filter>Header Files\Allocator</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\vxLib\Container\iterator.h">
-      <Filter>Header Files\container</Filter>
-    </ClInclude>
     <ClInclude Include="..\include\vxLib\Container\sorted_array.h">
-      <Filter>Header Files\container</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\vxLib\Container\sorted_vector.h">
-      <Filter>Header Files\container</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\vxLib\Container\vector.h">
       <Filter>Header Files\container</Filter>
     </ClInclude>
     <ClInclude Include="..\include\vxLib\Container\array.h">
@@ -224,6 +182,33 @@
     </ClInclude>
     <ClInclude Include="..\include\vxLib\string.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vxLib\Container\slist.h">
+      <Filter>Header Files\container</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vxLib\Allocator\BitmapBlock.h">
+      <Filter>Header Files\Allocator</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vxLib\Allocator\ChunkAllocator.h">
+      <Filter>Header Files\Allocator</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vxLib\Allocator\Freelist.h">
+      <Filter>Header Files\Allocator</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vxLib\Allocator\LinearAllocator.h">
+      <Filter>Header Files\Allocator</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vxLib\Allocator\Allocator.h">
+      <Filter>Header Files\Allocator</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vxLib\CpuTimer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vxLib\Allocator\Mallocator.h">
+      <Filter>Header Files\Allocator</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vxLib\Allocator\StackAllocator.h">
+      <Filter>Header Files\Allocator</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
