--- a/vxLib/vxLib.vcxproj.filters
+++ b/vxLib/vxLib.vcxproj.filters
@@ -238,5 +238,11 @@
     <ClInclude Include="..\include\vxLib\Graphics\dds.h">
       <Filter>Header Files\graphics</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\vxLib\Allocator\MultiBlockAllocator.h">
+      <Filter>Header Files\Allocator</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vxLib\Allocator\DefaultContainerAllocator.h">
+      <Filter>Header Files\Allocator</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
