added some bitfunctions for multiblock allocator. some fixes and optimizations.

--- a/vxLib/vxLib.vcxproj
+++ b/vxLib/vxLib.vcxproj
@@ -70,7 +70,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>d:\Users\dennis\Documents\Visual Studio 2015\Projects\double-conversion-master\include;d:\Users\dennis\Documents\Visual Studio 2015\Projects\vxLib\include;$(IncludePath)</IncludePath>
+    <IncludePath>d:\Users\dennis\Documents\Visual Studio 2015\Projects\double-conversion\include;d:\Users\dennis\Documents\Visual Studio 2015\Projects\vxLib\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -218,6 +218,7 @@
     <ClInclude Include="..\include\vxLib\thread\thread.h" />
     <ClInclude Include="..\include\vxLib\types.h" />
     <ClInclude Include="..\include\vxLib\type_traits.h" />
+    <ClInclude Include="..\include\vxLib\util\bitops.h" />
     <ClInclude Include="..\include\vxLib\util\CityHash.h" />
     <ClInclude Include="..\include\vxLib\util\DebugPrint.h" />
     <ClInclude Include="..\include\vxLib\util\streamHelper.h" />
