--- a/vxLib/vxLib.vcxproj.filters
+++ b/vxLib/vxLib.vcxproj.filters
@@ -93,6 +93,18 @@
     <ClCompile Include="..\source\CityHash.cpp">
       <Filter>Source Files\util</Filter>
     </ClCompile>
+    <ClCompile Include="..\source\string.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\ArrayAnalyzer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\murmurhash.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\ReflectionManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\include\vxLib\math\matrix.inl">
@@ -138,18 +150,6 @@
     </ClInclude>
     <ClInclude Include="..\include\vxLib\Window.h">
       <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\vxLib\Container\sorted_array.h">
-      <Filter>Header Files\container</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\vxLib\Container\array.h">
-      <Filter>Header Files\container</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\vxLib\Container\bitset.h">
-      <Filter>Header Files\container</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\vxLib\Container\DoubleBuffer.h">
-      <Filter>Header Files\container</Filter>
     </ClInclude>
     <ClInclude Include="..\include\vxLib\File\FileHandle.h">
       <Filter>Header Files\file</Filter>
@@ -247,8 +247,53 @@
     <ClInclude Include="..\include\vxLib\util\bitops.h">
       <Filter>Header Files\util</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\vxLib\platform.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vxLib\TypeInfo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vxLib\Container\bitset.h">
+      <Filter>Header Files\container</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vxLib\Container\DoubleBuffer.h">
+      <Filter>Header Files\container</Filter>
+    </ClInclude>
     <ClInclude Include="..\include\vxLib\Container\list.h">
       <Filter>Header Files\container</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vxLib\Container\sorted_array.h">
+      <Filter>Header Files\container</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vxLib\ArrayAnalyzer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vxLib\Container\DynamicArray.h">
+      <Filter>Header Files\container</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vxLib\Container\Array.h">
+      <Filter>Header Files\container</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vxLib\Container\StringArray.h">
+      <Filter>Header Files\container</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vxLib\Container\InplaceArray.h">
+      <Filter>Header Files\container</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vxLib\Container\String.h">
+      <Filter>Header Files\container</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vxLib\Container\ArrayBase.h">
+      <Filter>Header Files\container</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vxLib\hash.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vxLib\ReflectionManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vxLib\ReflectionData.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
